Removed FEM demo section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <h2 class="w3-center bold-text">Click an image to view a demo.</h2>
 </div>
 
-<!-- FEM DEMO SECTION -->
+<!-- FEM DEMO SECTION
 <div id="femDemo" class="w3-margin w3-container w3-white w3-padding-large w3-card fem-section">
     <h2 class="w3-center" style="margin-bottom: 20px;">The FEM website.</h2>
   <div class="image-container">
@@ -91,7 +91,7 @@
   <div class="button-container-div">
     <a href="https://github.com/seanmtech/FEM.git" target="blank" class="w3-button w3-black">See Code</a>
   </div>
-</div>
+</div> -->
 
 <!-- .NET DEMO SECTION -->
 
